# graphic-engine

./: CMakeLists.txt  README.md  makefile
assets/shaders/: lighting.fs  lighting.vs
client/: main.cpp
examples/: cubes.cpp
include/: Camera.h  Shader.h
include/glad/: glad.h
shaders/: default.fs  lighting.fs
src/: Camera.cpp  Shader.cpp  Shader.h
